# convert-labse-tf-pt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  model_card.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  publish-package.yml  run-tests.yml
config/: labse_config.json
model-cards/: LEALLA-base.md  LEALLA-large.md  LEALLA-small.md  LaBSE.md  smaller-LaBSE.md
src/convert_labse_tf_pt/: __init__.py  configurations.py  convert.py  convert_labse_tf_hub_to_pytorch.py  modeling.py
src/convert_labse_tf_pt/data/smaller_vocab/: vocab-en-fr-es-de-zh-ar-zh_classical-it-ja-ko-nl-pl-pt-th-tr-ru.txt
tests/: conftest.py  helpers.py  test_conversion.py  test_conversion_lealla.py  test_conversion_smaller.py  test_convert.py  test_convert_labse_tf_hub_to_pytorch.py  test_convert_labse_tf_pt.py
