[tool.poetry]
name = "convert-labse-tf-pt"
version = "0.1.0"
description = ""
authors = ["Setu Shah <setu+labse@setu.me>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "<1.6"
transformers = "^4.1.1"
tensorflow = "^2.4.0"
tensorflow-hub = "^0.11.0"
ipywidgets = "^7.6.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^20.8b1"
ipython = "^7.19.0"
ipykernel = "^5.4.2"
bert-for-tf2 = "^0.14.7"
isort = "^5.7.0"
pytest-pythonpath = "^0.7.3"
flake8 = "^3.8.4"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "ML", "FIRSTPARTY", "LOCALFOLDER"]
known_ml=["torch", "tensorflow", "tensorflow_hub", "transformers", "bert"]

[tool.pytest.ini_options]
python_paths = ["src/"]
