[tool.poetry]
name = "convert-labse-tf-pt"
version = "1.0.0"
description = "Convert LaBSE model from TensorFlow to PyTorch."
license = "MIT"
authors = ["Setu Shah <setu+labse@setu.me>"]
readme = "README.md"
homepage = "https://github.com/setu4993/convert-labse-tf-pt"
repository = "https://github.com/setu4993/convert-labse-tf-pt"
keywords = ["transformers", "bert", "labse", "pytorch", "tensorflow"]
packages = [{ include = "convert_labse_tf_pt", from = "src" }]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "<1.6"
transformers = "^4.1.1"
tensorflow = "^2.4.0"
tensorflow-hub = "^0.11.0"
ipywidgets = "^7.6.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^20.8b1"
ipython = "^7.19.0"
ipykernel = "^5.4.2"
bert-for-tf2 = "^0.14.7"
isort = "^5.7.0"
pytest-pythonpath = "^0.7.3"
flake8 = "^3.8.4"
pre-commit = "^2.9.3"

[tool.poetry.scripts]
convert_labse = "convert_labse_tf_pt.convert:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "ML", "FIRSTPARTY", "LOCALFOLDER"]
known_ml=["torch", "tensorflow", "tensorflow_hub", "transformers", "bert"]

[tool.pytest.ini_options]
python_paths = ["src/"]
